manifests/network/tailscale/overlays/home/tunnel-cloud-argocd-tunnel.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cloud-argocd-egress-tunnel
  namespace: tailscale
  labels:
    app: cloud-argocd-egress-tunnel
spec:
  containers:
  - name: cloud-argocd-egress-tunnel
    image: alpine/socat:1.8.0.3
    imagePullPolicy: IfNotPresent
    args: ["tcp-listen:80,fork,reuseaddr", "tcp-connect:cloud-argocd-egress:80"]
    ports:
    - containerPort: 80
    resources:
      requests:
        cpu: 1m
        memory: 5Mi
      limits:
        # cpu: 50m
        memory: 10Mi
  restartPolicy: Always
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: node-role.kubernetes.io/control-plane
            operator: DoesNotExist
          - key: kubernetes.io/arch
            operator: In
            values: 
            - "amd64"

---
apiVersion: v1
kind: Service
metadata:
  name: cloud-argocd-egress-tunnel
  namespace: tailscale
spec:
  selector:
    app: cloud-argocd-egress-tunnel
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  # annotations:
  #   tailscale.com/proxy-class: "run-on-worker"
  #   tailscale.com/tailnet-fqdn: "cloud-argocd.tailb7050.ts.net"
  name: cloud-argocd-egress
spec:
  externalName: cloud-argocd-egress
  type: ExternalName

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloud-argocd
  namespace: tailscale
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "cloud-argocd.ucdialplans.com"
  rules:
  - backendRefs:
    - name: cloud-argocd-egress-tunnel
      namespace: tailscale
      kind: Service
      port: 80
