manifests/network/tailscale/overlays/home/tunnel-cloud-argocd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cloud-argocd-tunnel
  namespace: tailscale
  labels:
    app: cloud-argocd-tunnel
spec:
  containers:
  - name: cloud-argocd-tunnel
    image: alpine/socat:1.8.0.3
    imagePullPolicy: IfNotPresent
    args: ["tcp-listen:80,fork,reuseaddr", "tcp-connect:cloud-argocd-link:80"]
    ports:
    - containerPort: 80
    resources:
      requests:
        cpu: 1m
        memory: 5Mi
      limits:
        # cpu: 50m
        memory: 10Mi
  restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: cloud-argocd-tunnel
  namespace: tailscale
spec:
  selector:
    app: cloud-argocd-tunnel
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/proxy-class: "default"
    tailscale.com/tailnet-fqdn: "cloud-argocd.tailb7050.ts.net"
    tailscale.com/hostname: cloud-argocd-link
  name: cloud-argocd-link
spec:
  externalName: cloud-argocd-link
  type: ExternalName

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloud-argocd
  namespace: tailscale
spec:
  parentRefs:
  - name: tls-laskonet
    namespace: cilium
    sectionName: https
  hostnames:
  - "cloud-argocd.laskonet.com"
  rules:
  - backendRefs:
    - name: cloud-argocd-tunnel
      namespace: tailscale
      kind: Service
      port: 80
