manifests/network/tailscale/overlays/home/tunnel-cloud-uptime-kuma.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cloud-uptime-kuma-tunnel
  namespace: tailscale
  labels:
    app: cloud-uptime-kuma-tunnel
spec:
  containers:
  - name: cloud-uptime-kuma-tunnel
    image: alpine/socat:1.8.1.1
    imagePullPolicy: IfNotPresent
    args: ["tcp-listen:3001,fork,reuseaddr", "tcp-connect:cloud-uptime-kuma-link:3001"]
    ports:
    - containerPort: 3001
    resources:
      requests:
        cpu: 1m
        memory: 5Mi
      limits:
        # cpu: 50m
        memory: 10Mi
  restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: cloud-uptime-kuma-tunnel
  namespace: tailscale
spec:
  selector:
    app: cloud-uptime-kuma-tunnel
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/proxy-class: "default"
    tailscale.com/tailnet-fqdn: "cloud-uptime-kuma.tailb7050.ts.net"
    tailscale.com/hostname: cloud-uptime-kuma-link
  name: cloud-uptime-kuma-link
spec:
  externalName: cloud-uptime-kuma-link
  type: ExternalName

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloud-uptime-kuma
  namespace: tailscale
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "cloud-uptime-kuma.laskonet.com"
  rules:
  - backendRefs:
    - name: cloud-uptime-kuma-tunnel
      namespace: tailscale
      kind: Service
      port: 3001
